Add product to favorites ready
